summarised objectives in the conclusion and limiting factors regarding data

--- a/03-SelectionPipeline.Rmd
+++ b/03-SelectionPipeline.Rmd
@@ -3171,7 +3171,7 @@ There was no evidence of selection in either of the previously identified loci o
 
 No selection signal was observed at _CREBRF_ in any of the Polynesian populations that were tested. One reason for this is that the CoreExome \gls{snp} array did not have the specific variants (rs12513649 and rs373863828) reported in @Minster2016. Downstream from _CREBRF_ there was a consistent signal with what had been reported. This was only found in the Western Polynesian populations and the populations of the \gls{eas} super population, so suggests that had the dataset contained the variants then detection would have been possible. However, without the two markers reported in @Minster2016 it was unable to be determined if _CREBRF_ had evidence of selection from the CoreExome data.
 
-The pathway analysis of genes that were in the extremes for the different selection and neutrality statistics showed that pathways involved with cell signalling (and more general in nature) were the main results for the Polynesian populations, rather than metabolic pathways. If selection had been acting on the pathways involved with urate, gout and related conditions it would have been expected to see enrichment in genes involved with metabolic pathways. The genes that indicated possible selection, even for obesity and \gls{t2d}, which are traditionally thought of as being the thrifty phenotype, were genes that were largely either neurological or involved in the immune system. \gls{nzm} did have significant results for two diabetes related pathways, "Type II diabetes mellitus_Homo sapiens_hsa04930" and "Insulin secretion_Homo sapiens_hsa04911", however, only up to 10% of the pathways had genes that met the significance thresholds. Of the genes that were part of those pathways, up to 50% were genes that encoded subunits of voltage-gated calcium channels. While some \gls{t2d}-associated individual loci show some signs of selection, it appears as if widespread selection is not the case. @Ayub2014c had a similar finding with respect to \gls{t2d}, where there was no support for the thrifty-gene hypothesis, testing across 65 \gls{t2d}-associated loci. 
+The pathway analysis of genes that were in the extremes for the different selection and neutrality statistics showed that pathways involved with cell signalling (and more general in nature) were the main results for the Polynesian populations, rather than specific metabolic pathways such as the urate pathway. If selection had been acting on the pathways involved with urate, gout and related conditions it would have been expected to see enrichment in genes involved with metabolic pathways. The genes that indicated possible selection, even for obesity and \gls{t2d}, which are traditionally thought of as being the thrifty phenotype, were genes that were largely either neurological or involved in the immune system. \gls{nzm} did have significant results for two diabetes related pathways, "Type II diabetes mellitus_Homo sapiens_hsa04930" and "Insulin secretion_Homo sapiens_hsa04911", however, only up to 10% of the pathways had genes that met the significance thresholds. Of the genes that were part of those pathways, up to 50% were genes that encoded subunits of voltage-gated calcium channels. While some \gls{t2d}-associated individual loci show some signs of selection, it appears as if widespread selection is not the case. @Ayub2014c had a similar finding with respect to \gls{t2d}, where there was no support for the thrifty-gene hypothesis, testing across 65 \gls{t2d}-associated loci. 
 
 As discussed in @Gosling2014, the thrifty-gene hypothesis in the context of the Pacific, where starvation during long voyages selected for thrifty-genes, does not fit with the anthropological history of Polynesian people, where they undertook planned voyages which settled the Pacific in a speedy manner. From the analysis results in this chapter, the thrifty-gene hypothesis appears to have none-to-minimal support from the loci that exhibit signals of possible selection. 
 
@@ -3243,7 +3243,11 @@ One of the limitations of using the \gls{gwas} catalog to create gene lists for 
 
 ### Conclusion
 
-The results of this study show there is indeed evidence indicative of selection in urate-associated loci in the Polynesian populations. This evidence however is not specific to urate. This is shown by the fact that there is little signal of selection appearing at the urate transporters themselves, but at the loci that are part of more general pathways. The pathways that were enriched by genes that displayed signatures of selection in Polynesian populations from the genome-wide analysis were dominated by metabolic pathways. Calcium transport and signalling was a central theme for the genes that showed evidence of possible positive selection in Polynesian populations. The reasons for why there would be selection still remain unclear but response to pathogenic challenge such as malaria is a potential mechanism.
+The first objective of this chapter was to investigate regions of the genome that had evidence of selection in Polynesian populations. The main result regarding this objective was that the pathways that were enriched by genes that displayed signatures of selection in Polynesian populations from the genome-wide analysis were dominated by metabolic pathways. Of these pathways, calcium transport and signalling was a central theme for the genes that showed evidence of possible positive selection in Polynesian populations.   
+
+The second objective of the chapter was to investigate regions that had a previous association with urate, gout, and associated co-morbidities. The results regarding this objected showed there was indeed evidence indicative of selection in urate-associated loci in the Polynesian populations. The evidence however was not specific to urate. This was shown by the fact that there was little signal of selection appearing at the urate transporters themselves, but at the loci that were part of more general pathways. There was also evidence of selection at other loci that were associated with the co-morbidities, but again the signals were in genes that were for general cell functions, rather than specific for the particular traits.  The reasons for why there would be selection still remain unclear but response to pathogenic challenge such as malaria in the case of urate is a potential mechanism. 
+
+The analysis had limiting factors with the main data using markers that originated from a \gls{snp} array, and the ascertainment bias this introduced to the statistics, especially for those dependant on the low-frequency variants. A second limiting factor was the use of empirical thresholds which will increase the number false-positives. Both of these factors should temper the conclusion of selection or lack thereof, at the loci investigated.
 
 
 
