wording change around natural selection versus neutral model.
Reference for probability of allele disappearing

--- a/01-Introduction.Rmd
+++ b/01-Introduction.Rmd
@@ -54,7 +54,7 @@ Adding further to the genetic drift side of the discussion was the neutral theor
 
 Crucial to both the neutral theory and the theory of natural selection is the estimation of the population mutation rate, commonly referred to as $\theta$. The Watterson estimator, $\theta$ = 2 $\times$ ploidy $\times$ N~e~ $\times$ $\mu$, represents the expected number of new mutations for a population per generation [@Watterson1975], where $\mu$ is the mutation rate and N~e~ is the effective population size. Effective population size is the size of an idealised population with the same amount of inbreeding or random gene frequency drift as the population under consideration [@KimuraCrow1963]. Other estimators of $\theta$ include: $\hat{\theta}$ = F~ST~ [@Weir1984], and $\hat{\theta}$ = E($\pi$), in the infinite sites model, where $\pi$ is the average pair-wise nucleotide differences per site [@Tajima1996a]. The infinite sites model assumes only one mutation occurs per site.
 
-Natural selection seems to be the more popular model to the neutral hypothesis, however the methodology for detecting selection utilises the neutral hypothesis for many of the methods mentioned later (section \@ref(selMethods)). These methods use a model for neutrality, and if the statistic reaches a level that is considered to be beyond that of the neutral model, the model is rejected. Typically, the neutral hypothesis is a composite hypothesis using assumptions for which it would be difficult to find a human population that fulfils them, such as: “the population is in equilibrium at constant size with no population subdivision or gene flow from other populations” [@Nielsen2005a].
+The neutral model allows for natural selection, but proposes that the majority of the genome is selectively neutral [@kimura1979neutral]. The methodology for detecting selection utilises the neutral hypothesis for many of the methods mentioned later (section \@ref(selMethods)). These methods use a model for neutrality, and if the statistic reaches a level that is considered to be beyond that of the neutral model, the model is rejected. Typically, the neutral hypothesis is a composite hypothesis using assumptions for which it would be difficult to find a human population that fulfils them, such as: “the population is in equilibrium at constant size with no population subdivision or gene flow from other populations” [@Nielsen2005a].
 
 ### Selection
 
@@ -172,7 +172,7 @@ In contrast to \gls{fwh} and \gls{td}, which compare either high or low frequenc
 
 #### F~ST~
 
-F~ST~ is a population differentiation metric that measures the differences in heterogeneity of a sub-population compared to a global population. Initially created by @Wright1951, as an inbreeding coefficient for inbreeding as a whole in a population (equation \@ref(eq:fst)), F~IT~ is the inbreeding coefficient for the individual in the total population and F~IS~ is the inbreeding coefficient for inbreeding of the individual in the subpopulation. Both F~IT~ and F~IS~ compare the observed heterozygosity of the individual with the expected heterozygosity in either the total population (F~IT~), or the subpopulation (F~IS~). These fixation indices provide ways of summarising population structure. Selection will act to drive an allele to fixation, whereas immigration usually reduces the frequency. When the selective advantage is strong, selection will be the dominant force on the locus, however, when the selective advantage approaches zero, the allele will begin to act neutrally and disappear with a probability of one minus its frequency [@ref]. Cockerham [-@Cockerham1969; -@Cockerham1973] equated $\theta$ (population genetic differentiation) with F~ST~, extending F~ST~ from calculating population structure to population differentiation too. The fixation indices were further developed by @Weir1984 to add population size weightings to the calculation. F~ST~ values fall between 0 and 1, each representing the fixation of an allele. Large differences in F~ST~ values are indicative of population differentiation, suggesting directional selection at that locus, whereas small differences in F~ST~ indicate that the populations are similar. F~ST~ can have high variation in neighbouring loci under neutrality [@Weir2005]. Unless populations are closely related, such as northwest and southeast Europeans [@Price2008a], the noise will drown out the signal, and identification of genome-wide significance in F~ST~ will be difficult. @Weir2005 suggested taking a sliding window approach to help improve the signal to noise ratio.
+F~ST~ is a population differentiation metric that measures the differences in heterogeneity of a sub-population compared to a global population. Initially created by @Wright1951, as an inbreeding coefficient for inbreeding as a whole in a population (equation \@ref(eq:fst)), F~IT~ is the inbreeding coefficient for the individual in the total population and F~IS~ is the inbreeding coefficient for inbreeding of the individual in the subpopulation. Both F~IT~ and F~IS~ compare the observed heterozygosity of the individual with the expected heterozygosity in either the total population (F~IT~), or the subpopulation (F~IS~). These fixation indices provide ways of summarising population structure. Selection will act to drive an allele to fixation, whereas immigration usually reduces the frequency. When the selective advantage is strong, selection will be the dominant force on the locus, however, when the selective advantage approaches zero, the allele will begin to act neutrally and disappear with a probability of one minus its frequency [@kimura_genetic_1968]. Cockerham [-@Cockerham1969; -@Cockerham1973] equated $\theta$ (population genetic differentiation) with F~ST~, extending F~ST~ from calculating population structure to population differentiation too. The fixation indices were further developed by @Weir1984 to add population size weightings to the calculation. F~ST~ values fall between 0 and 1, each representing the fixation of an allele. Large differences in F~ST~ values are indicative of population differentiation, suggesting directional selection at that locus, whereas small differences in F~ST~ indicate that the populations are similar. F~ST~ can have high variation in neighbouring loci under neutrality [@Weir2005]. Unless populations are closely related, such as northwest and southeast Europeans [@Price2008a], the noise will drown out the signal, and identification of genome-wide significance in F~ST~ will be difficult. @Weir2005 suggested taking a sliding window approach to help improve the signal to noise ratio.
 
 \begin{equation} 
 F_{ST} = \frac{F_{IT}{-}F_{IS}}{1{-}F_{IS}}
