extra information about the use of simulations to calculate power of detection

--- a/01-Introduction.Rmd
+++ b/01-Introduction.Rmd
@@ -225,14 +225,13 @@ Composite of selection signals (CSS) is similar to meta-analysis of multiple tes
 
 Power to detect selected sites can be very limited if the site is not an outlier from empirical methods, such as simulations or using permutations of the data, as they would not 'stand out' [@Teshima2006]. A key consideration when selecting a particular method for detecting selection is the limitations the method has on power to detect a selective event, such as starting and final allele frequency of the variant after a sweep. \Gls{td} is powered for low and intermediate frequency variants [@Simonsen1995] whereas \gls{fwh} is powered for intermediate and high frequency variants. Some methods such as \gls{ihs}, are good for detection of middle frequency variants. \Gls{xpehh}, on the other hand is powered at the fixation ends of the spectrum. \Gls{xpehh}, because it is correlated with \gls{ld}, lacks power to detect ancient selective events [@Chen2010].  Sample size is another factor to consider. \Gls{ihs} has modest reduction of power when reducing samples until approximately 40 samples of single chromosomes. \Gls{xpehh} can maintain power down to about 20 samples of single chromosomes, so long as the reference population is a fixed size. The grouping of similar genetic populations may be an option to increase power with low sample sizes [@pickrell2009signals]). For F~ST~, power to detect selection should be sufficient if sample size is > 1/F~ST~ [@Bhatia2013a; @Bhatia2011]
 
-Power of a statistic also needs to be considered for the type of selective sweep that may have occurred, such is the case with \gls{nsl}, which has similar power to detect selection to \gls{ihs}, but performs better for larger starting allele frequencies. It also outperforms \gls{ihs} in power in both hard and soft sweep scenarios [@Ferrer-Admetlla2014]. When it comes to picking up demographic events, haplotype tests are useful at detecting recent and more moderate bottlenecks, frequency spectrum tests (such as \gls{fwh}/ \gls{td}) have the best power for detecting moderately ancestral severe bottlenecks [@Depaulis2003], whereas \gls{ze} and \gls{flf} have the most power during population expansion [@Zeng2006;@Ramirez-Soriano2008].
+Power of a statistic also needs to be considered for the type of selective sweep that may have occurred, such is the case with \gls{nsl}, which has similar power to detect selection to \gls{ihs}, but performs better for larger starting allele frequencies. It also outperforms \gls{ihs} in power in both hard and soft sweep scenarios [@Ferrer-Admetlla2014]. When it comes to picking up demographic events, haplotype tests are useful at detecting recent and more moderate bottlenecks, frequency spectrum tests (such as \gls{fwh}/ \gls{td}) have the best power for detecting moderately ancestral severe bottlenecks [@Depaulis2003], whereas \gls{ze} and \gls{flf} have the most power during population expansion [@Zeng2006;@Ramirez-Soriano2008]. Assessment of power to detect selection has previously been done through simulation or the use of well established loci as positive controls [@voight2006map;@Zhai2009;@Cadzow2016]. When simulating, it important to generate scenarios that include different demographic events as well as selection events. Simulated models are generally done in one of three ways, as a coalescent model, or a forward-in-time model, or by resampling [@yuan_overview_2012]. The coalescent model (and most commonly used) works backwards-in-time to find the most recent common ancestor, and then permutes through models to arrive at the current state [@kingman_genealogy_1982;@yuan_overview_2012]. The forward-in-time simulations will take a starting ancestral population and then apply a population model, iterating through subsequent generations [@peng_forward-time_2010;@yuan_overview_2012]. Another approach can be to take the observed data and shuffle and resample it to generate empirical distributions. From each of these methods false positive and false negative rates can be calculated.
 
 ### Challenges
 
 When scanning genome-wide in a population (such as in a \gls{gwas}, or genome-wide selection scan), the variability in the genome also has population demographic events that have acted upon it, such as population bottlenecks, migration, or growth. Mutation and recombination are also acting on the genome. Methods based on comparing non-synonymous to synonymous variants are relatively unaffected, but methods based on allele frequency are susceptible to detecting population demographic events, along with mutation and recombination rate changes [@Nielsen2009]. A meta population is a population which can be subdivided into many different sub-populations among which there is some pattern of migration, extinction, and recolonization [@Wakeley2001]. Bottlenecks with a meta-population model can lead to a high frequency of derived alleles, greater than would be expected to arise through a neutral model [@Jensen2005] and as previously mentioned by @fay2000hitchhiking about high frequency derived alleles being a unique signature of selection, it not actually unique [@Przeworski2002].
 
-\Gls{snp} ascertainment bias is caused by the non-random sampling of SNPs on array chips. This is a problem that affects the selection detection methods to different extents, with frequency spectrum methods being the most susceptible. \Gls{td} is biased upwards due to the \gls{snp} discovery process having ascertainment biases, which leads to an excess of intermediate frequency alleles in the sample [@Kelley2006]. Tests that rely on long haplotypes are less susceptible to ascertainment bias [@sabeti2006positive] but because long haplotypes can be quickly broken down through recombination, they are only useful for short time periods. \Gls{snp} ascertainment bias can be overcome with 
-the use of whole genome sequencing [@Albrechtsen2010]. 
+\Gls{snp} ascertainment bias is caused by the non-random sampling of SNPs on array chips. This is a problem that affects the selection detection methods to different extents, with frequency spectrum methods being the most susceptible. \Gls{td} is biased upwards due to the \gls{snp} discovery process having ascertainment biases, which leads to an excess of intermediate frequency alleles in the sample [@Kelley2006]. Tests that rely on long haplotypes are less susceptible to ascertainment bias [@sabeti2006positive] but because long haplotypes can be quickly broken down through recombination, they are only useful for short time periods. \Gls{snp} ascertainment bias can be overcome with the use of whole genome sequencing [@Albrechtsen2010]. 
 
 Many of these statistics were developed to investigate selection at a particular locus, at a time when applying the statistics across a genome was not possible. Up until recently, genome scans have been performed using \gls{snp} genotypes identified through a \gls{snp} discovery process, which means they are not random samples – which would include non \gls{snp} genotypes (such as \glspl{indel}) and create an ascertainment bias [@Nielsen2005a]
 
