--- a/references-nourl.bib
+++ b/references-nourl.bib
@@ -4880,3 +4880,121 @@ volume = {30},
 year = {2013}
 }
 
+
+
+@article{choi_pathogenesis_2005,
+	title = {Pathogenesis of gout},
+	volume = {143},
+	url = {http://annals.org/article.aspx?articleid=718756},
+	urldate = {2013-04-23},
+	journal = {Annals of Internal Medicine},
+	author = {Choi, HK and Mount, DB and Reginato, AM},
+	year = {2005},
+	note = {Citation Key: Choi2005a},
+	pages = {499--516},
+	file = {Choi, Mount, Reginato - 2005 - Pathogenesis of gout(3).pdf:/home/murraycadzow/Zotero/storage/BLRI4SSS/Choi, Mount, Reginato - 2005 - Pathogenesis of gout(3).pdf:application/pdf}
+}
+
+
+@article{bush_chapter_2012,
+	title = {Chapter 11: {Genome}-{Wide} {Association} {Studies}},
+	volume = {8},
+	issn = {1553734X},
+	doi = {10.1371/journal.pcbi.1002822},
+	abstract = {Genome-wide association studies (GWAS) have evolved over the last ten years into a powerful tool for investigating the genetic architecture of human disease. In this work, we review the key concepts underlying GWAS, including the architecture of common diseases, the structure of common human genetic variation, technologies for capturing genetic information, study designs, and the statistical methods used for data analysis. We also look forward to the future beyond GWAS.},
+	number = {12},
+	journal = {PLoS Computational Biology},
+	author = {Bush, William S. and Moore, Jason H.},
+	year = {2012},
+	pmid = {23300413},
+	note = {Citation Key: Bush2012
+ISBN: 1553-7358 (Electronic){\textbackslash}r1553-734X (Linking)},
+	file = {Bush, Moore - 2012 - Chapter 11 Genome-Wide Association Studies(3).pdf:/home/murraycadzow/Zotero/storage/LS6RRL76/Bush, Moore - 2012 - Chapter 11 Genome-Wide Association Studies(3).pdf:application/pdf}
+}
+
+
+@article{orengo_uric_2009,
+	title = {Uric {Acid} {Is} a {Mediator} of the {Plasmodium} falciparum-{Induced} {Inflammatory} {Response}},
+	volume = {4},
+	issn = {1932-6203},
+	url = {https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0005194},
+	doi = {10.1371/journal.pone.0005194},
+	abstract = {Background Malaria triggers a high inflammatory response in the host that mediates most of the associated pathologies and contributes to death. The identification of pro-inflammatory molecules derived from Plasmodium is essential to understand the mechanisms of pathogenesis and to develop targeted interventions. Uric acid derived from hypoxanthine accumulated in infected erythrocytes has been recently proposed as a mediator of inflammation in rodent malaria. Methods and Findings We found that human erythrocytes infected with Plasmodium falciparum gradually accumulate hypoxanthine in their late stages of development. To analyze the role of hypoxanthine-derived uric acid induced by P. falciparum on the inflammatory cytokine response from human blood mononuclear cells, cultures were treated with allopurinol, to inhibit uric acid formation from hypoxanthine, or with uricase, to degrade uric acid. Both treatments significantly reduce the secretion of TNF, IL-6, IL-1β and IL-10 from human cells. Conclusions and Significance Uric acid is a major contributor of the inflammatory response triggered by P. falciparum in human peripheral blood mononuclear cells. Since the inflammatory reaction induced by P. falciparum is considered a major cause of malaria pathogenesis, identifying the mechanisms used by the parasite to induce the host inflammatory response is essential to develop urgently needed therapies against this disease.},
+	language = {en},
+	number = {4},
+	urldate = {2018-10-26},
+	journal = {PLOS ONE},
+	author = {Orengo, Jamie Marie and Leliwa-Sytek, Aleksandra and Evans, James E. and Evans, Barbara and Hoef, Diana van de and Nyako, Marian and Day, Karen and Rodriguez, Ana},
+	month = apr,
+	year = {2009},
+	keywords = {Cytokines, Inflammation, Inflammatory diseases, Malaria, Parasitic diseases, Plasmodium, Red blood cells, Uric acid},
+	pages = {e5194},
+	file = {Full Text PDF:/home/murraycadzow/Zotero/storage/TIVH693K/Orengo et al. - 2009 - Uric Acid Is a Mediator of the Plasmodium falcipar.pdf:application/pdf;Snapshot:/home/murraycadzow/Zotero/storage/SNFQDNTU/article.html:text/html}
+}
+
+@article{kimura_genetic_1968,
+	title = {Genetic variability maintained in a finite population due to mutational production of neutral and nearly neutral isoalleles.},
+	volume = {11},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/18976521},
+	doi = {10.1017/S0016672308009518},
+	journal = {Genetical research},
+	author = {Kimura, Motoo},
+	month = dec,
+	year = {1968},
+	pmid = {18976521},
+	note = {Citation Key: Kimura1968},
+	pages = {247--269},
+	file = {Kimura - 1968 - Genetic variability maintained in a finite population due to mutational production of neutral and nearly neutral isoa(2).pdf:/home/murraycadzow/Zotero/storage/PBCCK3GX/Kimura - 1968 - Genetic variability maintained in a finite population due to mutational production of neutral and nearly neutral isoa(2).pdf:application/pdf}
+}
+
+@article{yuan_overview_2012,
+	title = {An {Overview} of {Population} {Genetic} {Data} {Simulation}},
+	volume = {19},
+	issn = {1066-5277},
+	doi = {10.1089/cmb.2010.0188},
+	abstract = {Simulation studies in population genetics play an important role in helping to better understand the impact of various evolutionary and demographic scenarios on sequence variation and sequence patterns, and they also permit investigators to better assess and design analytical methods in the study of disease-associated genetic factors. To facilitate these studies, it is imperative to develop simulators with the capability to accurately generate complex genomic data under various genetic models. Currently, a number of efficient simulation software packages for large-scale genomic data are available, and new simulation programs with more sophisticated capabilities and features continue to emerge. In this article, we review the three basic simulation frameworks--coalescent, forward, and resampling--and some of the existing simulators that fall under these frameworks, comparing them with respect to their evolutionary and demographic scenarios, their computational complexity, and their specific applications. Additionally, we address some limitations in current simulation algorithms and discuss future challenges in the development of more powerful simulation tools.},
+	number = {1},
+	journal = {Journal of Computational Biology},
+	author = {Yuan, Xiguo and Miller, David J. and Zhang, Junying and Herrington, David and Wang, Yue},
+	year = {2012},
+	pmid = {22149682},
+	note = {Citation Key: Yuan2012},
+	keywords = {genome, backward simulators, disease association study, forward simulators, resampling, simulation},
+	pages = {42--54},
+	file = {Yuan et al. - 2012 - An Overview of Population Genetic Data Simulation(2).pdf:/home/murraycadzow/Zotero/storage/GV286VSI/Yuan et al. - 2012 - An Overview of Population Genetic Data Simulation(2).pdf:application/pdf}
+}
+
+
+@article{kingman_genealogy_1982,
+	title = {On the genealogy of large populations},
+	volume = {19},
+	issn = {0021-9002, 1475-6072},
+	url = {https://www.cambridge.org/core/product/identifier/S0021900200034446/type/journal_article},
+	doi = {10.2307/3213548},
+	abstract = {A new Markov chain is introduced which can be used to describe the family relationships among n individuals drawn from a particular generation of a large haploid population. The properties of this process can be studied, simultaneously for all n, by coupling techniques. Recent results in neutral mutation theory are seen as consequences of the genealogy described by the chain.},
+	language = {en},
+	number = {A},
+	urldate = {2018-10-29},
+	journal = {Journal of Applied Probability},
+	author = {Kingman, J. F. C.},
+	year = {1982},
+	pages = {27--43},
+	file = {Kingman - 1982 - On the genealogy of large populations.pdf:/home/murraycadzow/Zotero/storage/96UB8F5X/Kingman - 1982 - On the genealogy of large populations.pdf:application/pdf}
+}
+
+
+@article{peng_forward-time_2010,
+	title = {Forward-time simulation of realistic samples for genome-wide association studies.},
+	volume = {11},
+	issn = {1471-2105},
+	doi = {10.1186/1471-2105-11-442},
+	abstract = {BACKGROUND: Forward-time simulations have unique advantages in power and flexibility for the simulation of genetic samples of complex human diseases because they can closely mimic the evolution of human populations carrying these diseases. However, a number of methodological and computational constraints have prevented the power of this simulation method from being fully explored in existing forward-time simulation methods. RESULTS: Using a general-purpose forward-time population genetics simulation environment, we developed a forward-time simulation method that can be used to simulate realistic samples for genome-wide association studies. We examined the properties of this simulation method by comparing simulated samples with real data and demonstrated its wide applicability using four examples, including a simulation of case-control samples with a disease caused by multiple interacting genetic and environmental factors, a simulation of trio families affected by a disease-predisposing allele that had been subjected to either slow or rapid selective sweep, and a simulation of a structured population resulting from recent population admixture. CONCLUSIONS: Our algorithm simulates populations that closely resemble the complex structure of the human genome, while allows the introduction of signals of natural selection. Because of its flexibility to generate different types of samples with arbitrary disease or quantitative trait models, this simulation method can simulate realistic samples to evaluate the performance of a wide variety of statistical gene mapping methods for genome-wide association studies.},
+	journal = {BMC bioinformatics},
+	author = {Peng, Bo and Amos, Christopher I},
+	year = {2010},
+	pmid = {20809983},
+	note = {Citation Key: Peng2010
+ISBN: 1471-2105 (Electronic){\textbackslash}r1471-2105 (Linking)},
+	pages = {442},
+	file = {Peng, Amos - 2010 - Forward-time simulation of realistic samples for genome-wide association studies(2).pdf:/home/murraycadzow/Zotero/storage/LZDCZYQU/Peng, Amos - 2010 - Forward-time simulation of realistic samples for genome-wide association studies(2).pdf:application/pdf}
+}
