updated bibliography and checked for italics and capitialisations

--- a/diseaseGR-12-3-2018-nourl.bib
+++ b/diseaseGR-12-3-2018-nourl.bib
@@ -1207,7 +1207,7 @@
   title = {{An integrative study of the genetic, social and environmental determinants of chronic kidney disease characterized by tubulointerstitial damages in the North Central Region of Sri Lanka}},
   author = {Shanika Nanayakkara and S T M L D Senevirathna and Tilak Abeysekera and Rohana Chandrajith and Neelakanthi Ratnatunga and E D L Gunarathne and Junxia Yan and Toshiaki Hitomi and Eri Muso and Toshiyuki Komiya and Kouji H Harada and Wanyang Liu and Hatasu Kobayashi and Hiroko Okuda and Hideyuki Sawatari and Fumihiko Matsuda and Ryo Yamada and Takao Watanabe and Hideki Miyataka and Seiichiro Himeno and Akio Koizumi},
   year = {2014},
-  journal = {Journal of occupational health},
+  journal = {Journal of Occupational Health},
   volume = {56},
   number = {1},
   pages = {28-38},
@@ -1575,7 +1575,7 @@
   pages = {1211-1215},
   eprint = {18758464},
   doi = {10.1038/ng.203},
-  archiveprefix = {pubmed},
+  archiveprefix = {pubmed}
 }
 
 @article{liu2008genome,
@@ -1912,7 +1912,7 @@
 }
 
 @article{mcgovern2010fucosyltransferase,
-  title = {{Fucosyltransferase 2 (FUT2) non-secretor status is associated with Crohn's disease}},
+  title = {{Fucosyltransferase 2 (\emph{FUT2}) non-secretor status is associated with Crohn's disease}},
   author = {Dermot P B McGovern and Michelle R Jones and Kent D Taylor and Kristin Marciante and Xiaofei Yan and Marla Dubinsky and Andy Ippoliti and Eric Vasiliauskas and Dror Berel and Carrie Derkowski and Deb Dutridge and Phil Fleshner and David Q Shih and Gil Melmed and Emebet Mengesha and Lily King and Sheila Pressman and Talin Haritunians and Xiuqing Guo and Stephan R Targan and Jerome I Rotter},
   year = {2010},
   month = {Sep},
@@ -2528,7 +2528,7 @@
   author = {Wanling Yang and Huayang Tang and Yan Zhang and Xianfa Tang and Jing Zhang and Liangdan Sun and Jing Yang and Yong Cui and Lu Zhang and Nattiya Hirankarn and Hui Cheng and Hai-Feng Pan and Jinping Gao and Tsz Leung Lee and Yujun Sheng and Chak Sing Lau and Yang Li and Tak Mao Chan and Xianyong Yin and Dingge Ying and Qianjin Lu and Alexander Moon Ho Leung and Xianbo Zuo and Xiang Chen and Kwok Lung Tong and Fusheng Zhou and Qingchun Diao and Niko Kei Chiu Tse and Hongfu Xie and Chi Chiu Mok and Fei Hao and Sik Nin Wong and Bingjun Shi and Ka Wing Lee and Yan Hui and Marco Hok Kung Ho and Bo Liang and Pamela Pui Wah Lee and Hongzhou Cui and Qing Guo and Brian Hon-Yin Chung and Xiongming Pu and Qiji Liu and Xiaoguang Zhang and Change Zhang and Chun Yin Chong and Hong Fang and Raymond Woon Sing Wong and Yonghu Sun and Mo Yin Mok and Xiang-Pei Li and Yingyos Avihingsanon and Zhifang Zhai and Pornpimol Rianthavorn and Thavatchai Deekajorndej and Kanya Suphapeetiporn and Fei Gao and Vorasuk Shotelersuk and Xiaojing Kang and Shirley King Yee Ying and Lijuan Zhang and Wilfred Hing Sang Wong and Dingxian Zhu and Samuel Ka Shun Fung and Fanqin Zeng and Wai Ming Lai and Chun-Ming Wong and Irene Oi Lin Ng and Maria-Merc{\a`e} Garcia-Barcel{\a'o} and Stacey S Cherny and Nan Shen and Paul Kwong-Hang Tam and Pak Chung Sham and Dong-Qing Ye and Sen Yang and Xuejun Zhang and Yu Lung Lau},
   year = {2013},
   month = {Jan},
-  journal = {American journal of Human Genetics},
+  journal = {American Journal of Human Genetics},
   volume = {92},
   number = {1},
   pages = {41-51},
@@ -2538,7 +2538,7 @@
 }
 
 @article{yamazaki2013genome,
-  title = {{A genome-wide association study identifies 2 susceptibility Loci for Crohn's disease in a Japanese population}},
+  title = {{A genome-wide association study identifies 2 susceptibility loci for Crohn's disease in a Japanese population}},
   author = {Keiko Yamazaki and Junji Umeno and Atsushi Takahashi and Atsushi Hirano and Todd Andrew Johnson and Natsuhiko Kumasaka and Takashi Morizono and Naoya Hosono and Takaaki Kawaguchi and Masakazu Takazoe and Tetsuhiro Yamada and Yasuo Suzuki and Hiroki Tanaka and Satoshi Motoya and Masayo Hosokawa and Yoshiaki Arimura and Yasuhisa Shinomura and Toshiyuki Matsui and Takayuki Matsumoto and Mitsuo Iida and Tatsuhiko Tsunoda and Yusuke Nakamura and Naoyuki Kamatani and Michiaki Kubo},
   year = {2013},
   month = {Apr},
@@ -3104,7 +3104,7 @@
 }
 
 @article{demirci2016identification,
-  title = {{Identification of a New Susceptibility Locus for Systemic Lupus Erythematosus on Chromosome 12 in Individuals of European Ancestry}},
+  title = {{Identification of a new susceptibility locus for systemic lupus erythematosus on chromosome 12 in individuals of European ancestry}},
   author = {F Yesim Demirci and Xingbin Wang and Jennifer A Kelly and David L Morris and M Michael Barmada and Eleanor Feingold and Amy H Kao and Kathy L Sivils and Sasha Bernatsky and Christian Pineau and Ann E Clarke and Rosalind Ramsey-Goldman and Timothy J Vyse and Patrick M Gaffney and Susan Manzi and M Ilyas Kamboh},
   year = {2016},
   month = {Jan},
@@ -3146,14 +3146,14 @@
 }
 
 @article{yang2016identification,
-  title = {{Identification of Loci at 1q21 and 16q23 That Affect Susceptibility to Inflammatory Bowel Disease in Koreans}},
+  title = {{Identification of loci at 1q21 and 16q23 that affect susceptibility to inflammatory bowel disease in Koreans}},
   author = {Suk-Kyun Yang and Myunghee Hong and Hyunjung Oh and Hui-Qi Low and Seulgi Jung and Seonjoo Ahn and Youngjin Kim and Jiwon Baek and Cue Hyunkyu Lee and Eunji Kim and Kyung Mo Kim and Byong Duk Ye and Kyung-Jo Kim and Sang Hyoung Park and Ho-Su Lee and Inchul Lee and Hyoung Doo Shin and Buhm Han and Dermot P B McGovern and Jianjun Liu and Kyuyoung Song},
   year = {2016},
   month = {Dec},
   journal = {Gastroenterology},
   volume = {151},
   number = {6},
-  pages = {1096-1099.e4},
+  pages = {1096-1099},
   eprint = {27569725},
   doi = {10.1053/j.gastro.2016.08.025},
   archiveprefix = {pubmed},
